Body Part One Complete

--- a/index.html
+++ b/index.html
@@ -7,13 +7,44 @@
     <!-- All Css Files Link Start -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/media.css" />
+    <link rel="stylesheet" href="css/lightbox.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- All Css Files Link End -->
   </head>
   <body>
-    <section id="">
-
+    <section id="bodyOneImages">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 m-auto">
+                    <h1 class="headingOne">Brand Photos</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card">
+                        <a href="images/1.jpg" data-lightbox="roadtrip">
+                            <img src="images/1.jpg" style="height: 300px;" class="card-img-top img-fluid w-100" alt="">
+                        </a>
+                      </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <a href="images/2.jpg" data-lightbox="roadtrip">
+                            <img src="images/2.jpg" style="height: 300px;" class="card-img-top img-fluid w-100" alt="">
+                        </a>
+                      </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <a href="images/3.jpg" data-lightbox="roadtrip">
+                            <img src="images/3.jpg" style="height: 300px;" class="card-img-top img-fluid w-100" alt="">
+                        </a>
+                      </div>
+                </div>
+             
+            </div>
+        </div>
     </section>
 
 
@@ -22,6 +53,7 @@
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/waypoints.min.js"></script>
     <script src="js/counterup.min.js"></script>
+    <script src="js/lightbox.min.js"></script>
     <script src="js/script.js"></script>
     <!-- All JS Files Link End -->
   </body>
